# shayan-x-claude

./: .gitignore  CLAUDE.md  PLAN.md  README.md
.claude/: settings.json
.claude/agents/: backend-engineer.md  browser-verifier.md  code-reviewer.md  frontend-engineer.md  planner.md  test-engineer.md
.claude/commands/: implement.md  planning.md  ship.md
.claude/hooks/scripts/: lint_on_edit.py
.claude/skills/backend-database-ops/: SKILL.md
.claude/skills/backend-endpoint-builder/: SKILL.md
.claude/skills/backend-testing/: SKILL.md
.claude/skills/browser-verification/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/frontend-testing/: SKILL.md
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  main.py  supabase_client.py
backend/app/routers/: admin.py  orders.py  public.py
backend/app/schemas/: order.py  product.py
backend/app/services/: orders.py  products.py  storage.py
backend/db/: README.md  create_admin.sql  seed.sql
backend/scripts/: seed_shirts.py
backend/tests/: conftest.py  test_health.py
calculator/: index.html
db/migrations/: 0001_init.sql
docs/features/: README.md
docs/plans/: need-to-create-a-warm-quokka.md
frontend/: .env.local.example  CLAUDE.md  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: AddToCartButton.tsx  CartProvider.tsx  Header.tsx  ProductCard.tsx
frontend/lib/: api.ts  types.ts
frontend/test/: setup.ts  utils.tsx
(+33 files in other folders)
